--- a/src/application/agregarPreguntas.fxml
+++ b/src/application/agregarPreguntas.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AgregarPreguntasController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AgregarPreguntasController">
    <children>
       <Label layoutX="220.0" layoutY="21.0" text="Agregar Preguntas">
          <font>
@@ -79,6 +79,34 @@
             </HBox>
          </children>
       </HBox>
+      <HBox layoutX="317.0" layoutY="231.0">
+         <children>
+            <Label fx:id="textoTipo1" prefHeight="25.0" text="Dinamica">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <RadioButton fx:id="tipo1" mnemonicParsing="false" translateX="12.0">
+               <HBox.margin>
+                  <Insets top="4.0" />
+               </HBox.margin>
+            </RadioButton>
+         </children>
+      </HBox>
+      <HBox layoutX="425.0" layoutY="231.0">
+         <children>
+            <Label fx:id="textoTipo2" prefHeight="25.0" text="Estatica">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <RadioButton fx:id="tipo2" mnemonicParsing="false" translateX="12.0">
+               <HBox.margin>
+                  <Insets top="4.0" />
+               </HBox.margin>
+            </RadioButton>
+         </children>
+      </HBox>
       <ScrollPane layoutX="25.0" layoutY="263.0" pickOnBounds="false" style="-fx-background-color: transparent;" styleClass="edge-to-edge">
         <content>
           <AnchorPane focusTraversable="true" minHeight="0.0" minWidth="0.0" pickOnBounds="false" style="-fx-background-color: transparent;">
@@ -93,11 +121,7 @@
                                  </font>
                               </Label>
                               <TextField fx:id="textoOpcion1" prefHeight="25.0" prefWidth="553.0" />
-                              <RadioButton fx:id="opcion1" mnemonicParsing="false">
-                                 <HBox.margin>
-                                    <Insets top="4.0" />
-                                 </HBox.margin>
-                              </RadioButton>
+                              <RadioButton fx:id="opcion1" mnemonicParsing="false" />
                            </children>
                         </HBox>
                         <HBox spacing="13.0">
