--- a/src/application/generarExamen.fxml
+++ b/src/application/generarExamen.fxml
@@ -9,23 +9,23 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GenerarExamenController">
+<AnchorPane id="AnchorPane" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GenerarExamenController">
     <children>
         <Button fx:id="generarButton" layoutX="591.0" layoutY="414.0" onAction="#generarExamen" text="Generar" />
         <Label layoutX="24.0" layoutY="33.0" minHeight="16" minWidth="69" text="Nombre de Examen" />
       <TextField fx:id="examen" layoutX="156.0" layoutY="28.0" />
       <Button fx:id="agregarPreguntaButton" layoutX="410.0" layoutY="28.0" mnemonicParsing="false" onAction="#abrirAgregarPregunta" prefHeight="27.0" text="Agregar Pregunta / Materia / Tema" />
-      <Label fx:id="label1" layoutX="73.0" layoutY="83.0" minHeight="16" minWidth="50.0" prefHeight="17.0" prefWidth="50.0" text="Materia" />
-      <Label fx:id="label11" layoutX="222.0" layoutY="83.0" minHeight="16" minWidth="36.0" prefHeight="17.0" prefWidth="36.0" text="Tema" />
-      <Label fx:id="label111" layoutX="347.0" layoutY="83.0" minHeight="16" minWidth="50.0" prefHeight="17.0" prefWidth="60.0" text="Dificultad" />
-      <TextField fx:id="cantidad" alignment="CENTER" layoutX="460.0" layoutY="100.0" prefHeight="27.0" prefWidth="103.0" />
-      <Label fx:id="label1111" layoutX="482.0" layoutY="83.0" minHeight="16" minWidth="50.0" prefHeight="17.0" prefWidth="60.0" text="Cantidad" />
+      <Label fx:id="label1" layoutX="59.0" layoutY="83.0" minHeight="16" minWidth="50.0" prefHeight="17.0" prefWidth="50.0" text="Materia" />
+      <Label fx:id="label11" layoutX="190.0" layoutY="83.0" minHeight="16" minWidth="36.0" prefHeight="17.0" prefWidth="36.0" text="Tema" />
+      <Label fx:id="label111" layoutX="299.0" layoutY="83.0" minHeight="16" minWidth="50.0" prefHeight="17.0" prefWidth="60.0" text="Dificultad" />
+      <TextField fx:id="cantidad" alignment="CENTER" layoutX="511.0" layoutY="101.0" prefHeight="27.0" prefWidth="103.0" />
+      <Label fx:id="label1111" layoutX="533.0" layoutY="83.0" minHeight="16" minWidth="50.0" prefHeight="17.0" prefWidth="60.0" text="Cantidad" />
       <Button fx:id="borrarButton" layoutX="46.0" layoutY="413.0" mnemonicParsing="false" onAction="#deleteRow" text="Borrar" />
-      <Button fx:id="addButton" layoutX="595.0" layoutY="99.0" mnemonicParsing="false" onAction="#agregarPregunta" text="Agregar" />
+      <Button fx:id="addButton" layoutX="625.0" layoutY="101.0" mnemonicParsing="false" onAction="#agregarPregunta" text="Agregar" />
       <Button fx:id="returnButton" layoutX="511.0" layoutY="414.0" mnemonicParsing="false" onAction="#goBack" text="Regresar" />
-      <ComboBox fx:id="comboMaterias" layoutX="47.0" layoutY="101.0" onAction="#loadTemas" prefWidth="103.0" />
-      <ComboBox fx:id="comboTemas" layoutX="189.0" layoutY="101.0" onAction="#loadDificultades" prefWidth="103.0" />
-      <ComboBox fx:id="comboDificultades" layoutX="326.0" layoutY="101.0" prefWidth="103.0" />
+      <ComboBox fx:id="comboMaterias" layoutX="33.0" layoutY="101.0" onAction="#loadTemas" prefWidth="103.0" />
+      <ComboBox fx:id="comboTemas" layoutX="156.0" layoutY="101.0" onAction="#loadDificultades" prefWidth="103.0" />
+      <ComboBox fx:id="comboDificultades" layoutX="277.0" layoutY="101.0" onAction="#loadTipo" prefWidth="103.0" />
       <Label layoutX="314.0" layoutY="144.0" text="Preguntas">
          <font>
             <Font size="15.0" />
@@ -34,10 +34,13 @@
       <TableView fx:id="examVariableTable" layoutX="50.0" layoutY="165.0" prefHeight="234.0" prefWidth="620.0">
         <columns>
           <TableColumn fx:id="materiaCol" minWidth="155.0" prefWidth="-1.0" text="Materia" />
-          <TableColumn fx:id="temaCol" minWidth="155.0" prefWidth="-1.0" text="Tema" />
-            <TableColumn fx:id="dificultadCol" minWidth="155.0" prefWidth="175.0" text="Dificultad" />
-            <TableColumn fx:id="cantidadCol" minWidth="102.0" prefWidth="134.0" text="Cantidad" />
+          <TableColumn fx:id="temaCol" minWidth="119.0" prefWidth="155.0" text="Tema" />
+            <TableColumn fx:id="dificultadCol" minWidth="69.0" prefWidth="115.0" text="Dificultad" />
+            <TableColumn fx:id="tipoCol" prefWidth="105.0" text="Tipo" />
+            <TableColumn fx:id="cantidadCol" minWidth="53.0" prefWidth="89.0" text="Cantidad" />
         </columns>
       </TableView>
+      <ComboBox fx:id="comboTipo" layoutX="397.0" layoutY="101.0" prefWidth="103.0" />
+      <Label fx:id="label1112" layoutX="428.0" layoutY="83.0" minHeight="16" minWidth="50.0" prefHeight="17.0" prefWidth="60.0" text="Tipo" textAlignment="CENTER" />
     </children>
 </AnchorPane>
