--- a/src/application/generarExamen.fxml
+++ b/src/application/generarExamen.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8.0.151" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GenerarExamenController">
+<AnchorPane id="AnchorPane" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GenerarExamenController">
     <children>
         <Button fx:id="generarButton" layoutX="591.0" layoutY="414.0" onAction="#generarExamen" text="Generar" />
         <Label layoutX="24.0" layoutY="33.0" minHeight="16" minWidth="69" text="Nombre de Examen" />
@@ -43,5 +43,6 @@
       <ComboBox fx:id="comboTipo" layoutX="397.0" layoutY="101.0" prefWidth="103.0" />
       <Label fx:id="label1112" layoutX="428.0" layoutY="83.0" minHeight="16" minWidth="50.0" prefHeight="17.0" prefWidth="60.0" text="Tipo" textAlignment="CENTER" />
       <Label fx:id="label" layoutX="320.0" layoutY="406.0" text="Generado!" />
+      <Label fx:id="labelCant" layoutX="497.0" layoutY="136.0" text="No hay suficientes preguntas" />
     </children>
 </AnchorPane>
